@@ -5,9 +5,12 @@ Changelog
 1.2.5 (unreleased)
 ------------------
 
+- Remove old blog.tags.portlet from portlets.xml
+  [mathias.leimgruber]
+
 - Implement a patched conversation view, which allows
   commenting on folderish types (i.e BlogEntry)
-
+  [mathias.leimgruber]
 
 1.2.4 (2012-10-10)
 ------------------
